# multi-modal-neural-network

./: .coveragerc  .env.example  .flake8  .gh_pr_update_body.md  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Open-source multi-modal small neural network v1.md  README.md  SECURITY.md  Software development best practices.md  TRAINING_GUIDE.md  fix-lint-ci.patch  inference.py  pip_packages.txt  pyproject.toml  pytest.ini  remove_trailing_whitespace.ps1  requirements.txt  run_tests.ps1  run_tests.sh  train.py
.codacy/: cli.sh
.github/: CODEOWNERS  check_branch_runs.py  dependabot.yml  fetch_codacy_artifacts.py  fetch_run_jobs.py  fetch_run_logs.py  poll_branch_runs_long.py  poll_codacy_run.py  poll_codacy_run_long.py
.github/PULL_REQUEST_TEMPLATE/: pytorch-upgrade.md
.github/instructions/: codacy.instructions.md
.github/workflows/: codacy-analysis.yml  codacy.yml  lint.yml  pytorch-upgrade.yml  tests.yml
artifacts-19753745783/codacy-cli-output/: codacy-diag.txt
configs/: default.yaml
docs/: GPU_TRAINING.md  NPU_TRAINING.md  PRD_ASSESSMENT.md  UPGRADE_PYTORCH.md  USER_GUIDE.md
notebooks/: 01_getting_started.ipynb  02_training.ipynb  03_evaluation.ipynb
scripts/: inspect_torch_wheel.ps1
src/data/: __init__.py  dataset.py  selector.py
src/integrations/: base.py  knowledge_injection.py  validators.py  wolfram_alpha.py
src/models/: __init__.py  double_loop_controller.py  fusion_layer.py  heads.py  multi_modal_model.py  text_encoder.py  vision_encoder.py
src/training/: __init__.py  checkpoint_manager.py  device_manager.py  losses.py  optimizer.py  trainer.py  training_defaults.py  training_state.py
src/utils/: __init__.py  config.py  gpu_utils.py  logging.py  npu_utils.py  safe_load.py  subprocess_utils.py
test_logs/codacy/: inference.sarif  multi_modal_model.sarif  npu_utils.sarif  requirements.sarif  safe_load.sarif  test_safe_load.sarif  tests_workflow.sarif  trainer.sarif
tests/: README.md  conftest.py  mock_utils.py  test_accelerators.py  test_config_utils.py  test_data.py  test_gpu_utils.py  test_heads.py  test_integration.py  test_integrations.py  test_logging.py  test_models.py  test_multi_modal_model.py  test_npu_utils.py  test_safe_load.py  test_safe_load_utils.py  test_selector.py  test_subprocess_utils.py  test_trainer_unit.py  test_training.py
wandb/run-20251128_203357-t2mcgfcr/: run-t2mcgfcr.wandb
wandb/run-20251128_203357-t2mcgfcr/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_203445-nxt8ongv/: run-nxt8ongv.wandb
wandb/run-20251128_203445-nxt8ongv/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_203521-y962can8/: run-y962can8.wandb
wandb/run-20251128_203521-y962can8/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_203855-bcqv00br/: run-bcqv00br.wandb
wandb/run-20251128_203855-bcqv00br/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_204028-rt277wah/: run-rt277wah.wandb
wandb/run-20251128_204028-rt277wah/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_204904-i6w05x8k/: run-i6w05x8k.wandb
wandb/run-20251128_204904-i6w05x8k/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_210240-0c0hcl5t/: run-0c0hcl5t.wandb
wandb/run-20251128_210240-0c0hcl5t/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_210637-9npm7z0r/: run-9npm7z0r.wandb
wandb/run-20251128_210637-9npm7z0r/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_211247-xsdj7r4j/: run-xsdj7r4j.wandb
wandb/run-20251128_211247-xsdj7r4j/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251128_211349-5303y8ex/: run-5303y8ex.wandb
wandb/run-20251128_211349-5303y8ex/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_211609-55v8sl26/: run-55v8sl26.wandb
wandb/run-20251128_211609-55v8sl26/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_211642-0u5r55og/: run-0u5r55og.wandb
wandb/run-20251128_211642-0u5r55og/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_211755-dycnftin/: run-dycnftin.wandb
wandb/run-20251128_211755-dycnftin/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_213029-gahbsusc/: run-gahbsusc.wandb
wandb/run-20251128_213029-gahbsusc/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_214621-frmw8twl/: run-frmw8twl.wandb
wandb/run-20251128_214621-frmw8twl/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_215939-ccb2skku/: run-ccb2skku.wandb
wandb/run-20251128_215939-ccb2skku/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_222610-m8k03111/: run-m8k03111.wandb
wandb/run-20251128_222610-m8k03111/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_225456-qfqq54xf/: run-qfqq54xf.wandb
wandb/run-20251128_225456-qfqq54xf/files/: config.yaml  wandb-metadata.json
wandb/run-20251128_230758-cm6pnkbi/: run-cm6pnkbi.wandb
wandb/run-20251128_230758-cm6pnkbi/files/: config.yaml  wandb-metadata.json
wandb/run-20251129_100155-t32rsce6/: run-t32rsce6.wandb
wandb/run-20251129_100155-t32rsce6/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251129_113609-uixoovs1/: run-uixoovs1.wandb
wandb/run-20251129_113609-uixoovs1/files/: config.yaml  requirements.txt  wandb-metadata.json
